--- a/documentos/templates/core/base.html
+++ b/documentos/templates/core/base.html
@@ -122,7 +122,7 @@
                       <div class="col-4 text-justify">
                         <p class="small" style="text-align: justify">
                           Visión<br />
-                          {{Vision}}
+                          {{Vision}} - {{ EN_MANTENIMIENTO }}
                         </p>
                       </div>
                     </div>
@@ -137,9 +137,37 @@
     </div>
     {% include 'core/footer.html' %}
   </div>
+
+
   <script src="{% static 'lib/adminlte/plugins/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'lib/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
   <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
+{% if Mantenimiento %}
+<!-- MODAL DE MANTENIMIENTO BLOQUEANTE -->
+<div class="modal fade" id="modalMantenimiento" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content text-center p-4">
+      <h3 class="mb-3"><i class="fas fa-tools"></i> Mantenimiento en Progreso</h3>
+      <br/>
+      <p class="mb-4">La plataforma está actualmente en mantenimiento.</p> 
+      <p class="mb-4">Por favor espere.</p>
+      
+      <div class="spinner-border mt-3 d-block mx-auto" role="status" style="width: 4rem; height: 4rem;">
+        
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+<script>
+  $(document).ready(function() {
+      $("#modalMantenimiento").modal("show");
+      // bloqueo completo (evita scroll)
+      $("body").css("overflow", "hidden");
+  });
+</script>
+{% endif %}
 </body>
 </html>
