--- a/documentos/templates/core/base.html
+++ b/documentos/templates/core/base.html
@@ -143,31 +143,53 @@
   <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'lib/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
   <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
-{% if Mantenimiento %}
+{% if Anuncio.activo %}
 <!-- MODAL DE MANTENIMIENTO BLOQUEANTE -->
-<div class="modal fade" id="modalMantenimiento" data-backdrop="static" data-keyboard="false">
+<div class="modal fade" 
+     id="modalMantenimiento" 
+     data-backdrop="{% if Anuncio.tipo == 'info' %}true{% else %}static{% endif %}" 
+     data-keyboard="{% if Anuncio.tipo == 'info' %}true{% else %}false{% endif %}">
+
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content text-center p-4">
-      <h3 class="mb-3"><i class="fas fa-tools"></i> Mantenimiento en Progreso</h3>
-      <br/>
-      <p class="mb-4">La plataforma está actualmente en mantenimiento.</p> 
-      <p class="mb-4">Por favor espere.</p>
-      
-      <div class="spinner-border mt-3 d-block mx-auto" role="status" style="width: 4rem; height: 4rem;">
-        
-      </div>
+
+      {% if Anuncio.tipo == 'info' %}
+      <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar"
+              style="position: absolute; top: 10px; right: 10px;">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      {% endif %}
+
+      <h3 class="mb-3"><i class="{{ Anuncio.icono }}"></i> {{ Anuncio.titulo }}</h3>
+
+      <p class="mb-4">{{ Anuncio.mensaje }}</p>
+      <p class="mb-4">{{ Anuncio.observacion }}</p>
+
+      {% if Anuncio.tipo == 'info' %}
+      <div class="spinner-border mt-3 d-block mx-auto" role="status" style="width: 4rem; height: 4rem;"></div>
+      {% endif %}
       
     </div>
   </div>
 </div>
-
+{% endif %}   
 <script>
-  $(document).ready(function() {
-      $("#modalMantenimiento").modal("show");
-      // bloqueo completo (evita scroll)
-      $("body").css("overflow", "hidden");
-  });
+document.addEventListener("DOMContentLoaded", function() {
+    {% if Anuncio %}
+        const tipo = "{{ Anuncio.tipo }}";
+        const anuncioID = "{{ Anuncio.id }}";
+        const key = "anuncio_informativo_visto_" ; 
+        if (tipo === "info") {
+            if (!sessionStorage.getItem(key)) {
+                $("#modalMantenimiento").modal("show");
+                sessionStorage.setItem(key, "true");
+            }
+        } else {
+            $("#modalMantenimiento").modal("show");
+            sessionStorage.removeItem(key); 
+        }
+    {% endif %}
+});
 </script>
-{% endif %}
 </body>
 </html>
