--- a/documentos/templates/core/header.html
+++ b/documentos/templates/core/header.html
@@ -125,7 +125,7 @@
               style="background: none; border: none"
             >
               <i class="nav-icon fas fa-sign-out-alt"></i>
-              <p>Cerrar sesióndd {{ Mantenimiento }}</p>
+              <p>Cerrar sesión</p>
             </button>
           </form>
         </li>
