--- a/documentos/templates/core/header.html
+++ b/documentos/templates/core/header.html
@@ -112,6 +112,14 @@
             <p>Reporte</p>
           </a>
         </li>
+        {% if perms.documentos.crear_procedencia %}
+        <li class="nav-item">
+          <a href="{% url 'manto_sistema' %}" class="nav-link">
+            <i class="nav-icon fas fa-cog"></i>
+            <p>Mantenimiento</p>
+          </a>
+        </li>
+        {% endif %}
         <li class="nav-item mt-auto">
           <form
             action="{% url 'cerrar_sesion' %}"
