--- a/documentos/templates/mantenimiento/general.html
+++ b/documentos/templates/mantenimiento/general.html
@@ -60,6 +60,7 @@
                     class="form-control"
                     id="txt_procedencia"
                     name="txt_procedencia"
+                    required
                   />
                 </div>
                 <div class="col-md-6">
@@ -70,7 +71,7 @@
                     type="text"
                     class="form-control"
                     id="txt_procedencia_l"
-                    name="txt_procedencia_l"
+                    name="txt_procedencia_l" required
                   />
                 </div>
               </div>
