--- a/documentos/templates/documentacion/form_procesamiento.html
+++ b/documentos/templates/documentacion/form_procesamiento.html
@@ -90,7 +90,7 @@
     {{ proc.cod_nota.cod_estado_preregistro }}
   </td>
 
-  <td>{{ proc.cod_nota.cod_usuario }}</td>
+  <td>{{ proc.cod_usuario }}</td>
 
   <td>
     <div class="dropdown">
