--- a/documentos/templates/core/base.html
+++ b/documentos/templates/core/base.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <title>Gestor de Notas</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'img/ejercito.png' %}">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="{% static 'lib/adminlte/plugins/fontawesome-free/css/all.min.css' %}">
