--- a/documentos/templates/documentacion/disposicion_print.html
+++ b/documentos/templates/documentacion/disposicion_print.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 20px;
             background-color:white;
-        }
+            }
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -65,6 +65,7 @@
             }
             .no-print, h1, .instructions, .django-notes {
                 display: none !important;
+            }
             .container {
                 box-shadow: none;
                 padding: 0;
@@ -96,7 +97,7 @@
     <div class="container">
         <h1 class="no-print">Disposición</h1>
         <table class="form-table">
-            <tr>
+           <tr>
                 <td class="form-header" style="width: 30%">FECHA:{{ nota.fch_exp_formateada}}</td>
                 <td class="form-header" style="width: 40%">REGISTRO: {{ nota.cod_nota.registro}}</td>
                 
@@ -108,14 +109,14 @@
                 </td>
             </tr>
             <tr>
-                <td style="background-color:{{ nota.cod_nota.cod_procedencia.cod_proced_superior.color}};!important" colspan="1" class="form-header">PROCEDENCIA:   </td>
-                <td style=" background-color:{{ nota.cod_nota.cod_procedencia.cod_proced_superior.color}};!important" colspan="2" class="form-header">{{ nota.cod_nota.cod_procedencia}} - EXP: {{ nota.cod_nota.no_exp}} </td>
+                <td style="background-color:{{nota.cod_usuario.user_color.color}};!important" colspan="1" class="form-header">PROCEDENCIA:   </td>
+                <td style=" background-color:{{nota.cod_usuario.user_color.color}};!important" colspan="2" class="form-header">{{ nota.cod_nota.cod_procedencia}} - EXP: {{ nota.cod_nota.no_exp}} </td>
             </tr>
             <tr>
                 <td colspan="3" class="form-header" style="text-align: justify;">CONTENIDO: <br>{{ nota.contenido}}</td>
             </tr>
             <tr>
-                <td colspan="3" class="form-header content-cell">DISPOSICIÓN <br></td>
+                <td colspan="3" class="form-header content-cell">DISPOSICIÓN <br></td>{{usuario.color}}
             </tr>
             <tr>
                 <td colspan="1" class="form-header">FECHA LIMITE: <br>{{ nota.fch_limite_formateada}}</td>
