--- a/documentos/templates/index.html
+++ b/documentos/templates/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Secc. de Inf. (E-6) </title>
+  <link rel="icon" type="image/x-icon" href="{% static 'img/ejercito.png' %}">
+  <title>Gestor de Notas</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="{% static 'lib/adminlte/plugins/fontawesome-free/css/all.min.css' %}">
@@ -12,11 +13,9 @@
   <link rel="stylesheet" href="{% static 'lib/adminlte/css/adminlte.min.css' %}">
   <link rel="stylesheet" href="{% static 'lib/adminlte/icon/bootstrap-icons.css' %}">
 </head>
-
 <body class="hold-transition login-page">
   <div class="login-box">
     <div class="card card-outline card-primary">
-
       <div class="card-body">
         <div class="text-center">
           <img class="profile-user-img img-fluid rounded" src="{% static '../static/lib/adminlte/img/Ejercito.png' %}"
@@ -63,5 +62,4 @@
   <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
 </body>
-
 </html>
