--- a/documentos/templates/registration/login.html
+++ b/documentos/templates/registration/login.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Secc. de Inf. (E-6)</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'img/ejercito.png' %}">
+    <title>Gestor de Notas</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" />
     <link rel="stylesheet" href="{% static 'lib/adminlte/plugins/fontawesome-free/css/all.min.css' %}" />
     <link rel="stylesheet" href="{% static 'lib/adminlte/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}" />
