--- a/documentos/templates/core/header.html
+++ b/documentos/templates/core/header.html
@@ -134,12 +134,6 @@
         <p>Procedencia</p>
       </a>
     </li>
-    <li class="nav-item">
-      <a href="" class="nav-link">
-        <i class="far fa-circle nav-icon"></i>
-        <p>Roles</p>
-      </a>
-    </li>
   </ul>
 </li>
         {% endif %}
@@ -157,7 +151,7 @@
               style="background: none; border: none"
             >
               <i class="nav-icon fas fa-sign-out-alt"></i>
-              <p>Cerrar sesiónv</p>
+              <p>Cerrar sesión</p>
             </button>
           </form>
         </li>
