--- a/documentos/templates/documentacion/form_recepcion copy.html
+++ b/documentos/templates/documentacion/form_recepcion copy.html
@@ -42,19 +42,53 @@
             </div>
           </div>
           <div class="card-body">
-<table id="example1" class="table table-bordered table-striped table-sm">
-  <thead>
-    <tr>
-      <th>No.</th>
-      <th>Fecha</th>
-      <th>Remitente</th>
-      <th>Exp.</th>
-      <th>Estado</th>
-      <th>Responsable</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-</table>
+            <table id="example1" class="table table-bordered table-striped table-sm compact-table" style="font-size: 12px">
+              <thead>
+                <tr>
+                  <th>No.</th>
+                  <th>Fecha</th>
+                  <th>Remitente</th>
+                  <th>Exp.</th>
+                  <th>Estado</th>
+                  <th>Responsable</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for ls_preregistro_notas in ls_preregistro_notas %}
+                <tr>
+                  <td>{{ forloop.counter }}</td>
+                  <td>{{ ls_preregistro_notas.fch_rcp_formateada }}</td>
+                  <td>{{ls_preregistro_notas.cod_procedencia }}</td>
+                  <td>{{ls_preregistro_notas.no_exp}}</td>
+                  <td>{{ls_preregistro_notas.cod_estado_preregistro}}</td>
+                  <td>{{ls_preregistro_notas.cod_usuario}}</td>
+                  <td>
+                    <div class="dropdown">
+                      <button class="btn btn-outline-primary btn-sm btn-block dropdown-toggle" type="button" id="accionesCentro{{ cme.id }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Acciones
+                      </button>
+                      <div class="dropdown-menu" aria-labelledby="accionesCentro{{ notas_procesadas.id }}">
+                        <a class="dropdown-item text-info" href="#" data-toggle="modal" data-target="#modal_revisar" onclick="revisar({{ls_preregistro_notas.id }})">
+                          Revisar
+                        </a>
+                        {% if ls_preregistro_notas.cod_estado_preregistro.id == 4 %}
+                        <a class="dropdown-item text-warning" href="#" data-toggle="modal" data-target="#modal_corregir" onclick="corregir({{ls_preregistro_notas.id }})">
+                          Corregir
+                        </a>
+                        {% endif %}
+                         {% if ls_preregistro_notas.cod_estado_preregistro.id == 1 %}
+                         <a href="{% url 'eliminar_nota' ls_preregistro_notas.id %}" class="dropdown-item text-danger" onclick="return confirm('¿Seguro que quieres eliminar este registro?');">
+                          Eliminar
+                        </a>
+                        {% endif %}
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
             <br />
             <div class="container">
               <div class="btn_add_req">
@@ -386,53 +420,34 @@
 <script src="{% static 'lib/adminlte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
 
 <script>
-jQuery(document).ready(function ($) {
-  $("#example1").DataTable({
-    processing: true,
-    serverSide: true,
-    pageLength: 10,
-    lengthMenu: [10, 25, 50, 100],
-    order: [[1, "desc"]],
-    ajax: {
-      url: "{% url 'preregistro_datatable' %}",
-      type: "GET"
-    },
-    columns: [
-      { data: "contador", orderable: false },
-      { data: "fecha" },
-      { data: "remitente" },
-      { data: "expediente" },
-      { data: "estado" },
-      { data: "responsable" },
-      { data: "acciones", orderable: false, searchable: false }
-    ],
-    language: {
-      decimal: "",
-      emptyTable: "No hay datos disponibles en la tabla",
-      info: "Mostrando _START_ a _END_ de _TOTAL_ entradas",
-      infoEmpty: "Mostrando 0 a 0 de 0 entradas",
-      infoFiltered: "(filtrado de _MAX_ entradas totales)",
-      infoPostFix: "",
-      thousands: ",",
-      lengthMenu: "Mostrar _MENU_ entradas",
-      loadingRecords: "Cargando...",
-      processing: "Procesando...",
-      search: "Buscar:",
-      zeroRecords: "No se encontraron registros coincidentes",
-      paginate: {
-        first: "Primero",
-        last: "Último",
-        next: "Siguiente",
-        previous: "Anterior",
+  jQuery(document).ready(function ($) {
+    $("#example1").DataTable({
+      language: {
+        decimal: "",
+        emptyTable: "No hay datos disponibles en la tabla",
+        info: "Mostrando _START_ a _END_ de _TOTAL_ entradas",
+        infoEmpty: "Mostrando 0 a 0 de 0 entradas",
+        infoFiltered: "(filtrado de _MAX_ entradas totales)",
+        infoPostFix: "",
+        thousands: ",",
+        lengthMenu: "Mostrar _MENU_ entradas",
+        loadingRecords: "Cargando...",
+        processing: "Procesando...",
+        search: "Buscar:",
+        zeroRecords: "No se encontraron registros coincidentes",
+        paginate: {
+          first: "Primero",
+          last: "Último",
+          next: "Siguiente",
+          previous: "Anterior",
+        },
+        aria: {
+          sortAscending: ": activar para ordenar la columna ascendente",
+          sortDescending: ": activar para ordenar la columna descendente",
+        },
       },
-      aria: {
-        sortAscending: ": activar para ordenar la columna ascendente",
-        sortDescending: ": activar para ordenar la columna descendente",
-      },
-    }
+    });
   });
-});
-
 
   $(document).ready(function () {
     $("#procedencia_sup").change(function () {
