--- a/documentos/templates/documentacion/disposicion_print.html
+++ b/documentos/templates/documentacion/disposicion_print.html
@@ -120,7 +120,7 @@
             </tr>
             <tr>
                 <td colspan="1" class="form-header">FECHA LIMITE: <br>{{ nota.fch_limite_formateada}}</td>
-                <td colspan="2" class="form-header" style="text-align: center;">{{firma.cod_grado.descrip_larga}} {% if firma.cod_arma.descrip_corta != 'N/A' %} de {{firma.cod_arma}} {%endif%}<br><br><br> {{firma.nom_completo}}<br>{{firma.cargo_segun_firma}}<br>{{firma.serie}}</td>
+                <td colspan="2" class="form-header" style="text-align: center;">{{firma.cod_grado.descrip_larga|upper}} {% if firma.cod_arma.descrip_corta != 'N/A' %} DE {{firma.cod_arma.descrip_larga}} DEM. {%endif%}<br><br><br> {{firma.nom_completo|upper}}<br>{{firma.cargo_segun_firma|upper}}<br>{{firma.serie|upper}}</td>
             </tr>
         </table>
         <button class="print-button no-print" onclick="window.print()">Imprimir Formulario</button>
